sf-src/force-app/main/default/objects/Lead/fields/ApproachMethod__c.field-meta.xml
<CustomField>
    <fullName>ApproachMethod__c</fullName>
    <label>アプローチ方法</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>電話</fullName>
            </value>
            <value>
                <fullName>メール</fullName>
            </value>
            <value>
                <fullName>LINE</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>