sf-src/force-app/main/default/objects/Lead/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>ブランド</label>
    <type>Lookup</type>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>リード</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>