sf-src/force-app/main/default/objects/Lead/fields/LastApproachBy__c.field-meta.xml
<CustomField>
    <fullName>LastApproachBy__c</fullName>
    <label>最終アプローチ担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>リード（最終アプローチ担当者）</relationshipLabel>
    <relationshipName>LastApproachLeads</relationshipName>
    <type>Lookup</type>
</CustomField>