sf-src/force-app/main/default/objects/Lead/fields/LastApproachDate__c.field-meta.xml
<CustomField>
    <fullName>LastApproachDate__c</fullName>
    <label>最終アプローチ日</label>
    <type>Date</type>
</CustomField>