sf-src/force-app/main/default/objects/Lead/fields/LastApproachMethod__c.field-meta.xml
<CustomField>
    <fullName>LastApproachMethod__c</fullName>
    <label>最終アプローチ手法</label>
    <length>50</length>
    <type>Text</type>
</CustomField>