sf-src/force-app/main/default/objects/Lead/fields/MigrationDone__c.field-meta.xml
<CustomField>
    <fullName>MigrationDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>移行済み</label>
    <type>Checkbox</type>
</CustomField>