sf-src/force-app/main/default/objects/Lead/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <label>ランク</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>A：積極的に質問・話を聞いてくれた人</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>B：インスタフォロー＋名刺交換できたが反応薄い</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>C：名刺だけ交換できた</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>D：その他</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>