sf-src/force-app/main/default/objects/Lead/fields/SubStatus__c.field-meta.xml
<CustomField>
    <fullName>SubStatus__c</fullName>
    <label>サブステータス</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>不通</fullName>
            </value>
            <value>
                <fullName>通電：今いそ（案内はまだ）</fullName>
            </value>
            <value>
                <fullName>通電：日程調整のみ（案内済み）</fullName>
            </value>
            <value>
                <fullName>通電：価格NG</fullName>
            </value>
            <value>
                <fullName>通電：タイミングNG</fullName>
            </value>
            <value>
                <fullName>通電：他社NG</fullName>
            </value>
            <value>
                <fullName>通電：門前</fullName>
            </value>
            <value>
                <fullName>通電：番号相違</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>